--- a/app/bupa/webapp/test/index.html
+++ b/app/bupa/webapp/test/index.html
@@ -17,10 +17,10 @@
 	</style>
 	<script
 		id="sap-ui-bootstrap"
-		src="https://sapui5.hana.ondemand.com/1.113.0/resources/sap-ui-core.js"
+		src="https://ui5.sap.com/1.113.0/resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_horizon"
 		data-sap-ui-resourceroots='{
-            "com.rizing.demo.bupa": "./"
+            "com.rizing.demo.bupa": "../"
         }'
 		data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 		data-sap-ui-compatVersion="edge"
